<resources>
    <string name="app_name">wePlantPractica</string>
    <string name="splash_hi">Привет, я Вайолет!</string>
    <string name="splash_violet">Существует так много растений на выбор,
        что легко почувствовать себя потерянным. Позволь мне помочь тебе выбрать что-нибудь.</string>
    <string name="splash_go">Начать</string>
    <string name="menu_home">Главная</string>
    <string name="menu_library">Библиотека</string>
    <string name="menu_aid">Помощь</string>
    <string name="menu_community">Сообщество</string>
    <string name="home_welcome">Откройте для себя красивые комнатные растения и
        узнайте, как за ними ухаживать</string>
    <string name="home_text_welcome">Ищете что-то простое для начала?
        Или вы ищете то единственное растение, которое будет отлично смотреться в вашей спальне?
        Эти категории помогут вам быстро начать работу!</string>
    <string name="home_question">Какое растение вы ищете?</string>
    <string name="home_indoor">Легкие комнатные растения</string>
    <string name="home_popular">Популярные растения</string>
    <string name="home_friendly">Растения, благоприятные для животных</string>
    <string name="home_light">Растения, требующие мало света</string>
    <string name="tab1">Легкие</string>
    <string name="tab2">Популярные</string>
    <string name="tab3">Благоприятные</string>
    <string name="tab4">Мало света</string>
    <string name="home_ask">Хотите улучшить навыки садовода? Ознакомьтесь с этими руководствами:</string>
    <string name="home_guide">Руководство по поливу</string>
    <string name="home_watering">Узнайте все об основах полива!</string>
    <string name="home_guide2">Руководство по освещению</string>
    <string name="home_lighting">Какое лучшее место для вашей новой плантации?</string>
    <string name="library_heading">Библиотека растений</string>
    <string name="community_post">Post 1 - Домашние животные и растения</string>
    <string name="community_explanation_post">Как наши четвероногие друзья относятся к
        комнатным растениям?</string>
    <string name="library_plant_name">Алокасия Амазонская</string>
    <string name="library_plant_explanation">Сложность: промежуточная
Пространство: гостинная</string>
    <string name="plant_difficulty">Сложность</string>
    <string name="plant_difficulty_explanation">Промежуточная</string>
    <string name="plant_light">Требовательность к свету</string>
    <string name="plant_light_explanation">Избегайте прямых солнечных лучей</string>
    <string name="plant_size">Размер</string>
    <string name="plant_size_explanation">Средний</string>
    <string name="plant_room">Комната</string>
    <string name="plant_room_explanation">Гостинная</string>
    <string name="plant_about">Об этом растении</string>
    <string name="plant_watering">Полив</string>
    <string name="plant_cost">Стоимость</string>
    <string name="aid_heading">Первая помощь</string>
    <string name="aid_start">Уход за растениями не всегда самый простой, когда вы не знаете,
        с чего начать. Как только вы изучите основы ухода за растениями и найдете свои способы,
        вы заметите все замечательные преимущества того, чтобы быть родителем растений.</string>
    <string name="aid_watering">Руководство по поливу растений</string>
    <string name="aid_light">Руководство по расположению растений</string>
    <string name="aid_repotting">Руководство по пересадке растений</string>
    <string name="watering1">\t\tПоливать ваши растения кажется простым делом,
        но с таким количеством различных видов у всех есть свои предпочтения.
        Самый простой способ узнать, как поливать ваше растение,
        - это поискать его в нашей библиотеке растений!
        Но здесь мы также поделимся с вами некоторыми общими советами.</string>
    <string name="watering2">• Сколько воды давать?\n
    • Как часто вы должны поливать?\n
    • Когда поливать?\n
    • Как насчет температуры воды?\n
    • Распыление</string>
    <string name="watering3">Сколько воды давать?</string>
    <string name="watering4">\t\tЭто действительно зависит от растения. Например, кактусу,
        привыкшему выживать в пустыне, много не понадобится. С другой стороны,
        растение из джунглей будет регулярно нуждаться в воде. Есть несколько вещей,
        о которых следует помнить при поливе.
\n• Некоторые растения нуждаются в меньшем количестве воды зимой, чем летом
\n• Температура в помещении, количество света и влажность влияют на то, сколько воды нужно растению.
\n• Убедитесь, что корни растения не остаются погруженными в воду, иначе они могут заплесневеть
        (отверстия в нижней части поглаживания помогают вытекать лишней воде).</string>
    <string name="watering5">Когда поливать?</string>
    <string name="watering6">\t\tКак правило, лучше всего поливать растения утром.
        Это тот момент, когда вода и ваше растение все еще прохладны.
        Представьте себе, что вас облили холодной водой в жаркий день!
        Вашим растениям это тоже не понравилось бы.
        Особенно летом это может повредить вашему растению.</string>
    <string name="watering7">Как часто вы должны поливать?</string>
    <string name="watering8">\t\tЭто зависит от некоторых вещей, которые мы обсуждали ранее,
        хотя обычно растения любят влажную грязь. Так что не слишком влажно и не слишком сухо.
        Хороший способ проверить это - ткнуть пальцем в грязь. Прилипает ли это?
        Тогда она все еще может быть слишком влажной.
        Обычно полив один раз в неделю будет нормальным, если дать нужное количество воды.</string>
    <string name="watering9">Как насчет температуры воды?</string>
    <string name="watering10">\t\tПридерживайтесь чего-нибудь комнатной температуры
        (по причинам, объясненным ранее). Однако, если в комнате действительно тепло,
        то также немного подогрейте воду. Поэтому, как правило, у вас должна быть вода,
        которая несколько теплее, чем та, которую мы пили бы из-под крана.</string>
    <string name="watering11">Распыление</string>
    <string name="light1">\t\tТак же, как и при поливе вашего растения, количество света,
        в котором оно нуждается, варьируется в зависимости от вида. Растения из пустыни, например,
        привыкли находиться под прямыми и резкими солнечными лучами.
        Однако некоторые растения джунглей привыкли жить в тени более крупных деревьев.</string>
    <string name="light2">• Смена времен года\n
• Прямой солнечный свет\n
• Полутень\n
• Тень\n</string>
    <string name="light3">Смена времен года</string>
    <string name="light4">\t\tВремена года играют большую роль в освещении. Весной и летом солнечный
        свет намного сильнее, чем осенью и зимой. Некоторые растения, которые могут выдерживать
        прямой свет зимой, могут оказаться неспособными делать то же самое летом.
        Как правило, мы можем разделить комнатные растения на три категории, которые мы обсудим
        далее.</string>
    <string name="light5">Прямой солнечный свет</string>
    <string name="light6">\t\tОкна, выходящие на юг, обычно пропускают много прямых солнечных лучей.
        Не все растения выдерживают это. Однако пустынным растениям это место может понравиться.
        Мы хотели бы сделать здесь небольшое замечание. В наши дни некоторые пустынные растения
        выращиваются в питомниках с полутенью. Это означает, что они, возможно, больше не привыкнут
        к резкому и прямому свету. Вместо этого не ставьте его прямо перед окном, а передвиньте
        поближе в течение нескольких недель, чтобы растение могло привыкнуть к свету.</string>
    <string name="light7">Полутень</string>
    <string name="light8">\t\tБольшинство растений предпочитает полутень. Это означает, что растение
        время от времени получает прямой свет или свет отражается косвенно. Эти растения обычно
        находятся примерно в 3-5 метрах от окна или рядом с окном, а не перед ним.</string>
    <string name="light9">Тень</string>
    <string name="light10">\t\tНи одно растение не может жить без света, но небольшой кучке их нужно
        совсем немного. Они отлично подходят для темных углов комнаты. Среди них есть несколько
        пальм и кактусов. Они, как правило, просты в обслуживании, потому что могут выживать в самых
        разных условиях с небольшим количеством воды. Однако подвал или чердак без окон могут быть
        не самыми лучшими для этих растений. Даже они не смогут выжить в таких пространствах.</string>
    <string name="repottingt1">\t\tНикогда не пересаживали растение? Все в порядке! Некоторым не
        нравится это делать, или об этом полностью забывают.
        Однако мы все равно рекомендуем вам это сделать.
        Пересадка гарантирует, что ваши растения останутся свежими и здоровыми!</string>
    <string name="repottingt2">• Почему должны пересаживать?\n
• Когда пересаживать?\n
• Пересадка нового растения\n
• Горшки с отверстием для воды\n
• Горшки без отверстия для воды</string>
    <string name="repottingt3">Почему должны пересаживать?</string>
    <string name="repottingt4">\t\tБольшинство растений растут довольно быстро. Если они чувствуют
        себя комфортно, их корням потребуется место для роста. Пересадка дает им необходимое
        пространство и стимулирует рост корней. Это гарантирует, что они не "задохнутся".
        Кроме того, более старая грязь более уязвима для болезней. Это также проще, потому что с
        большим горшком вы можете поливать больше за один раз
        (поэтому вам нужно поливать реже).</string>
    <string name="repottingt5">Когда пересаживать?</string>
    <string name="repottingt6">\t\tНу, на самом деле стандартного правила не существует, но примерно
        каждые 1-2 года. Это зависит от растения, так что вам придется убедиться в этом
        самостоятельно. Если корни растут над землей или снизу, это верный признак. Также, когда
        растение заболело, хорошо дать ему немного свежей грязи. Наконец, это зависит от того, как
        быстро растет растение. Пересадку можно проводить в течение всего года, но мы рекомендуем
        проводить весной. В это время года они растут больше всего, так что им будет
        легче приспособиться.</string>
    <string name="repottingt7">Пересадка нового растения</string>
    <string name="repottingt8">\t\tПосле покупки нового растения у него обычно есть детский горшок,
        но он не всегда находится в декоративном горшке. Вы можете поместить детский горшок прямо
        в декоративный горшок, или вы можете пересадить растение и удалить детский горшок.
        Это зависит от вас. Однако существует два разных типа декоративных горшков.
        С водяными скважинами и без них.</string>
    <string name="repottingt9">Горшки с отверстием для воды</string>
    <string name="repottingt10">\t\tНекоторые декоративные горшки имеют отверстие на дне, через которое
        вытекает лишняя вода. Это очень полезно, потому что избыток воды может привести к загниванию
        корней. Просто чтобы убедиться, что ваш пол не промокнет,положите что-нибудь под горшок,
        чтобы собрать лишнюю воду.</string>
    <string name="repottingt11">Горшки без отверстия для воды</string>
    <string name="repottingt12">\t\tДекоративные горшки без отверстия для воды бывают самых разных
        стилей и размеров. Они, как правило, более "современные", и людям нравится, как они
        выглядят. Недостатком является то, что корни ваших растений могут загнить, если на дне
        горшка будет слишком много воды. Чтобы решить эту проблему, вы можете использовать
        специальный гравий или гидрогранулы. Помещая их на дно кастрюли,
        они поглощают избыток воды и медленно высвобождают ее с течением времени.</string>
</resources>