<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="@color/new_green">

    <ImageView
        android:id="@+id/splashFrame"
        android:layout_width="61dp"
        android:layout_height="76dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splashTextHi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/splash_hi"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/splashImageViolet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/splash_avatar"
        app:layout_constraintEnd_toEndOf="@+id/splashTextHi"
        app:layout_constraintStart_toStartOf="@+id/splashTextHi"
        app:layout_constraintTop_toBottomOf="@+id/splashTextHi" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="115dp"
        android:layout_marginTop="20dp"
        android:text="@string/splash_violet"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/splashImageViolet"
        app:layout_constraintStart_toStartOf="@+id/splashImageViolet"
        app:layout_constraintTop_toBottomOf="@+id/splashImageViolet" />

    <Button
        android:id="@+id/splashButton"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/splash_go"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>