<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FragmentAnimal">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/animalIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/plant_library_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/animalHeading"
                android:layout_width="261dp"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="23dp"
                android:text="@string/library_heading"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/animalIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/animalImagePlantIndoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/plant_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animalHeading" />

            <TextView
                android:id="@+id/animalTextName"
                android:layout_width="138dp"
                android:layout_height="42dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="130dp"
                android:text="@string/library_plant_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/animalImagePlantIndoor"
                app:layout_constraintTop_toTopOf="@+id/animalImagePlantIndoor" />

            <TextView
                android:layout_width="153dp"
                android:layout_height="31dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/library_plant_explanation"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/animalImagePlantIndoor"
                app:layout_constraintTop_toBottomOf="@+id/animalTextName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>